# daysync

./: .gitignore  大型项目规划.md  需求
daysync/: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
daysync/apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
daysync/apps/desktop/src/: App.tsx  main.tsx  media-import.ts  project-persistence.ts  styles.css
daysync/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
daysync/apps/desktop/src-tauri/capabilities/: default.json
daysync/apps/desktop/src-tauri/icons/: icon.icns
daysync/apps/desktop/src-tauri/src/: main.rs
daysync/apps/desktop/src/api/: client.ts  tauri.ts  types.ts
daysync/apps/desktop/src/components/: AppShell.tsx  AutoCandidatePanel.tsx  ReviewQueueCard.tsx  SubtitleMatchBoard.tsx  SyncResultCard.tsx
daysync/apps/desktop/src/pages/: ExportPage.tsx  FlatTimelinePage.tsx  MediaImportPage.tsx  ProjectHomePage.tsx  SubtitleSearchAndSyncPage.tsx
daysync/apps/desktop/tests/: api-client.test.ts  app-bootstrap.test.tsx  app-state.test.tsx  auto-candidate-panel.test.tsx  export-page.test.tsx  flat-timeline-page.test.tsx  media-import-page.test.tsx  project-home-page.test.tsx  project-persistence.test.ts  review-queue-card.test.tsx  subtitle-match-board.test.tsx  sync-result-card.test.tsx  tauri-runtime.test.ts
daysync/daysync_workspace/: __init__.py
daysync/docs/: requirements.md
daysync/sample_data/expected/: sync_report.csv
daysync/sample_data/media/: A001_C001.mov  A001_C002.mov  mock_audio_001.json  mock_video_001.json  mock_video_002.json
daysync/sample_data/subtitles/: audio_flat.srt  video_flat.srt
daysync/scripts/: build_windows_release.ps1  ensure_ffmpeg.py
daysync/services/: __init__.py
daysync/services/api/: app_state.py  main.py
daysync/services/api/routes/: admin.py  export.py  health.py  media.py  projects.py  studio.py  subtitles.py  sync.py  timeline.py
daysync/services/api/schemas/: models.py
daysync/tests/: test_api_cors.py  test_auto_conform_flow.py  test_bridge_worker_utf8_io.py
daysync/tests/e2e/: test_mvp_flow.py
daysync/tools/ffmpeg/windows-x64/: README.md
doc/: DaySync_GPT5.4_开发需求规格书.md  SKILL.md  (+3 more)
(+22 files in other folders)
