[package]
name = "daysync_desktop"
version = "0.1.0"
description = "DaySync desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
default = []
